Fix SonarQube MEDIUM+ issues: regex safety, complexity, cleanup
Addresses the open MEDIUM/HIGH/BLOCKER issues from a full project scan
(renanzazula_skateboard-podcast-be), excluding plsql:VarcharUsageCheck
false positives on the Postgres Flyway migrations.

- java:S8786/S5869 (YoutubeDescriptionParser): drop the redundant \s*
  before the guest-header capture group (ambiguous with the following
  .*, causing non-linear regex backtracking) and narrow the Instagram
  URL character class to lowercase only, since FLAGS already carries
  CASE_INSENSITIVE.
- java:S5850 (PodcastService/ImportPostsService/SynchronizeYoutubeChannelService):
  group the slug-trim alternation explicitly as (^-)|(-$) in all three
  duplicated copies of generateSlug, kept in sync per project convention.
- java:S3776 (YoutubeClient.fetchPlaylistItems, MatchSpotifyEpisodeService.execute):
  extract page-fetch/item-mapping and best-match/link/log helpers to
  bring cognitive complexity under the limit without changing behavior.
- java:S6204 (PostPersistenceAdapter): Stream.collect(Collectors.toList())
  -> Stream.toList() where the result is never mutated by its callers.
- java:S1186 (CategoryJpaEntity/PostJpaEntity/PostPlatformLinkJpaEntity):
  document the empty JPA no-args constructors.
- java:S4502 (SecurityConfig): document why disabling CSRF is safe for
  this stateless, bearer-JWT-only resource server.
- java:S5778 (Reorder/SetDefault/UpdateCategory/UpdatePostServiceTest):
  hoist the Input/id construction out of the assertThatThrownBy lambda
  so only the call under test can throw.
- java:S5976 (YoutubeDescriptionParserTest): collapse the three flagged
  groups of near-identical tests into @ParameterizedTest + @MethodSource.

Skipped (with reason):
- java:S107 x5 (Category/Post constructors and create/reconstitute
  factories, 12-19 params): this is the documented aggregate
  create/reconstitute pattern (see CLAUDE.md); cutting parameter count
  would require a builder/parameter-object touc